# EngineeringShell

./: .gitignore  README.md  build.py  builddeps.py
backends/: CMakeLists.txt  README.md  builddeps.py  deps.json
backends/src/: main.cc
backends/src/channel/: CMakeLists.txt  Channel.cc  Channel.h  WebSocketChannel.cc  WebSocketChannel.h
backends/src/log/: LogFileManager.cc  LogFileManager.h  LogSinker.cc  LogSinker.h  Logger.cc  Logger.h
backends/src/util/: Runloop.h  (+4 more)
doc/: tsconfig.md
frontends/: README.md  check.js  package.json  release.js  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js
frontends-common/script/: check.js  check.ts  compile.js  compile.ts  cryption.js  cryption.ts  delete.js  delete.ts
frontends-js/: README.md  build.mjs  package.json  webpack.main.config.js  webpack.renderer.config.js
frontends-js/script/: check.js
frontends-tauri/: README.md  eslint.config.mjs  package.json  tsconfig.json  webpack.config.js
frontends-tauri/.cargo/: config.toml
frontends-tauri/plugin/: CheckImportTransformer.js
frontends-tauri/script/: delete.ts  move.ts
frontends-tauri/src/: App.tsx  bridge.ts  index.html  index.tsx
frontends-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontends-ts/: .npmrc  README.md  eslint.config.mjs  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
frontends-ts/plugin/: LogTransformer.js
frontends-ts/script/: delete.js
frontends/plugin/: ChangeMainPlugin.js
frontends/script/: compile.js  delete.js
frontends/subprograms/: Backends  README.md
(+30 files in other folders)
